<resources>
    <string name="app_name">FlytDream</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createAccountText">Create New Account</string>
    <string name="blank" />
    <string name="emailRegisterHint">Email</string>
    <string name="passwordEditHint">Password</string>
    <string name="repasswordEditHint">Confirm Password</string>
    <string name="phoneRegisterHint">Phone number</string>
    <string name="tocText">By creating account you agree to our terms of conditions</string>
    <string name="policyTextViewText">Read about our <b>Privacy Policy</b></string>
    <string name="signInViewText">Sign In</string>
    <string name="rememberAccountText">Remember account</string>
    <string name="forgotPassword"><u>Forgot Password</u></string>
    <string name="greetUserText">Hey User!</string>
    <string name="sloganText">Sky is the limit. Explore the world with FlyDreamAir.</string>
    <string name="yourTripText">Your Trips</string>
    <string name="seeAll"><![CDATA[See all >]]></string>
    <string name="location1Text">Eifiel Tower</string>
    <string name="location2Text">China</string>
    <string name="popularDestination">Popular Destinations</string>
    <string name="location1Des">Paris Eyfel Kulesi</string>
    <string name="location2Des">Shanghai, China</string>
    <string name="flightSectionText">Flight</string>
    <string name="serviceSectionText">Services</string>
    <string name="bookSectionText">Book</string>
    <string name="depart">Depart From:</string>
    <string name="arrive">Going To:</string>
    <string name="departureDate">Departure Date:</string>
    <string name="classS">Class:</string>
    <string name="passenger">Passenger:</string>
    <string name="date">Select a date</string>
    <string name="passengerInputText">Input number of passenger</string>
    <string name="nameInputText">Name:</string>
    <string name="ageInputText">Age:</string>
    <string name="genderInputText">Gender:</string>
    <string name="passportInput">Passport:</string>
    <string name="departureCalendarText">Depart On</string>
    <string name="passengerCount">Passenger</string>
    <string name="initialValue">0</string>
    <string name="adultCountViewText">Adult:</string>
    <string name="childCountViewText">Child:</string>
    <string name="infantCountViewText">Infant:</string>
    <string name="flightSe">Depart Flight Selection</string>
    <string name="flightRe">Return Flight Selection</string>
    <string name="returnDate">Return Date:</string>
    <string name="notS">Not Selectable</string>
    <string name="fromto">Depart</string>
    <string name="cityHint">Enter city name</string>
    <string name="passengerInfoText">Passenger Information</string>
    <string name="passengerNumber">Passenger 1</string>
    <string name="extraBaggageView">Extra Baggage ($200):</string>
    <string name="oneWayString">One Way</string>
    <string name="roundTripString">Round Trip</string>
    <string name="multiCityString">Multi-City</string>
    <string name="returnString">Return On</string>
    <string name="tba">To Be Implemented</string>
    <string name="manageBookingText">Manage Booking</string>
    <string name="bookReference">Booking Reference Code:</string>
    <string name="bookrefhint">Code</string>
    <string name="customerName">Customer Name:</string>
</resources>