<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitySelectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flightSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/flightSectionText"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serviceSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/serviceSectionText"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/bookSectionText"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank" />

        <TextView
            android:id="@+id/cityReturnType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fromto"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/searchCity"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cityHint"
            android:inputType="text"
            android:text="@string/blank" />

        <ListView
            android:id="@+id/cityDisplay"
            android:layout_width="match_parent"
            android:layout_height="391dp" />

    </LinearLayout>

</FrameLayout>