<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flightSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/flightSectionText"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serviceSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/serviceSectionText"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/bookSectionText"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameInputText" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nameInputText"
            android:inputType="text"
            android:text="@string/blank" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:src="@drawable/vector" />

        <TextView
            android:id="@+id/ageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ageInputText" />

        <EditText
            android:id="@+id/ageEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ageInputText"
            android:inputType="number"
            android:text="@string/blank" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:src="@drawable/vector" />

        <TextView
            android:id="@+id/genderInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genderInputText" />

        <Spinner
            android:id="@+id/genderSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:src="@drawable/vector" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passportInput" />

        <EditText
            android:id="@+id/passportEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passportInput"
            android:inputType="text"
            android:text="@string/blank" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/vector" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/seat_confirm"
            android:background="@android:color/transparent"/>

    </LinearLayout>
</FrameLayout>