<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flightSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/flightSectionText"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serviceSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/serviceSectionText"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/bookSectionText"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:src="@drawable/flight_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:text="@string/depart"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrive"
                    android:textColor="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userDepartCity"
                    android:layout_width="550dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/unselected_flight_background"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/blank"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/citySwitch"
                    android:layout_width="fill_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_switch" />

                <TextView
                    android:id="@+id/userArriveCity"
                    android:layout_width="550dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/unselected_flight_background"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/blank"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/vector" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/vector" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/departureDate"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/returnDate"
                    android:textColor="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateSelection"
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/returnSelection"
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/notS"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/vector" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/classS"
                    android:textColor="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/passengerInput"
                    android:layout_width="190dp"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:text="@string/passengerInputText"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/classSelect"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/vector" />

            <ImageButton
                android:id="@+id/searchFlightButton"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:background="@android:color/transparent"
                android:src="@drawable/select_flight" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>