<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ExploreFragment">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="130px"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/manageBookingText"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:text="@string/bookReference" />

        <EditText
            android:id="@+id/referenceEdit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/inputbox"
            android:ems="10"
            android:inputType="text"
            android:text="@string/blank"
            android:paddingLeft="20px"
            android:layout_marginTop="20px"/>

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:text="@string/customerName" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/inputbox"
            android:ems="10"
            android:inputType="text"
            android:text="@string/blank"
            android:paddingLeft="20px"
            android:layout_marginTop="20px"/>

        <ImageButton
            android:id="@+id/nextManageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/next_button"
            android:background="@android:color/transparent"
            android:layout_marginTop="180px" />
    </LinearLayout>
</FrameLayout>