<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlightSelectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flightSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/flightSectionText"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serviceSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/serviceSectionText"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:text="@string/bookSectionText"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flightSe"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flightDisplay"
            android:layout_width="390dp"
            android:layout_height="314dp"
            android:layout_gravity="center_horizontal"
            android:divider="@android:color/transparent"
            android:dividerHeight="1000dp" />

        <ImageButton
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:background="@android:color/transparent"
            android:src="@drawable/seat_confirm" />
    </LinearLayout>
</FrameLayout>