<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/Base.Theme.FlytDream"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="656dp"
        android:layout_height="899dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <EditText
        android:id="@+id/phoneRegisterEdit"
        android:layout_width="305dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phoneRegisterHint"
        android:inputType="phone"
        android:text="@string/blank"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text_border"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEdit" />

    <EditText
        android:id="@+id/confirmPasswordEdit"
        android:layout_width="305dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/repasswordEditHint"
        android:inputType="textPassword"
        android:text="@string/blank"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text_border"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterEdit" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/createAccountText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/emailRegisterEdit"
        android:layout_width="305dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/emailRegisterHint"
        android:inputType="text"
        android:text="@string/blank"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text_border"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView" />

    <EditText
        android:id="@+id/passwordRegisterEdit"
        android:layout_width="305dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/passwordEditHint"
        android:inputType="textPassword"
        android:text="@string/blank"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text_border"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterEdit" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="CheckBox"
        app:layout_constraintEnd_toStartOf="@+id/rememberAccountText"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneRegisterEdit" />

    <TextView
        android:id="@+id/rememberAccountText"
        android:layout_width="264dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:text="@string/tocText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneRegisterEdit" />

    <TextView
        android:id="@+id/policyTextView"
        android:layout_width="308dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/policyTextViewText"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rememberAccountText" />

    <ImageButton
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:background="@android:color/transparent"
        android:src="@drawable/create_account_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/policyTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>